<resources>

    <string name="app_name">一起记账</string>
    <string name="start">立即开始</string>
    <string name="http_request_exception">网络请求出现异常</string>
    <string name="fmt_http_request_error">网络请求错误，错误代码：</string>
    <string name="fmt_server_error">请求服务器错误，错误代码：</string>
    <string name="server_not_responding">服务器没有响应</string>
    <string name="unable_parse_responding">无法解析服务器响应</string>
    <string name="title_main">一起记账</string>
    <string name="title_login">登录</string>
    <string name="title_default_back">返回</string>
    <string name="btn_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_verify_vf_code">填写验证码</string>
    <string name="title_complete_register">填写密码</string>
    <string name="title_account_book">账本管理</string>
    <string name="title_account_book_edit">编辑账本</string>
    <string name="title_record">记一笔</string>
    <string name="title_invite_member">邀请</string>
    <string name="title_new_account_book">新建账本</string>
    <string name="hint_username">邮箱</string>
    <string name="lbl_password">输入密码</string>
    <string name="lbl_confirm_password">确认密码</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_email_register">请输入您的电子邮箱地址</string>
    <string name="hint_vf_code">请输入验证码</string>
    <string name="hint_remarks">备注</string>
    <string name="hint_click_remarks">点击这里，写点备注吧~</string>
    <string name="btn_next">下一步</string>
    <string name="btn_complete_register">完成注册</string>
    <string name="btn_register">注册</string>
    <string name="btn_retrieve_password">忘记密码？</string>
    <string name="fmt_lbl_send_mail">我们已给你的邮箱 %s 发送了一封验证邮件。</string>
    <string name="fmt_msg_makesure_delete_account_book">请确认是否删除账本\"%s\"，删除后将无法恢复。</string>
    <string name="msg_can_not_delete_account_book">不能删除当前账本，如要删除，请更换当前账本后再执行。</string>
    <string name="btn_delete">删除</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="lbl_name">名称</string>
    <string name="lbl_description">描述</string>
    <string name="menu_account_login">用户登录</string>
    <string name="menu_about">关于我们</string>
    <string name="btn_new">新建</string>

</resources>