<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.nan.ia.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="@dimen/padding"
        android:text="温馨提示：只差最后一步噢，填写密码，让你的账号数据无从丢失。密码由6-16位的英文、数字和下划线组成"
        android:textColor="@color/font_white_ltlt"
        android:textSize="14sp" />

    <com.nan.ia.app.widget.FullLineEditControl
        android:id="@+id/full_line_edit_control_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/full_line_edit_control_password"
        android:layout_marginTop="-1dp"
        app:fulllineedit_left_text="@string/lbl_confirm_password"
        app:fulllineedit_max_length="16" >
    </com.nan.ia.app.widget.FullLineEditControl>

    <com.nan.ia.app.widget.FullLineEditControl
        android:id="@+id/full_line_edit_control_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/margin"
        app:fulllineedit_left_text="@string/lbl_password"
        app:fulllineedit_max_length="16" >
    </com.nan.ia.app.widget.FullLineEditControl>

    <com.nan.ia.app.widget.CustomButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/full_line_edit_control_confirm_password"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:text="@string/btn_complete_register" />

    <com.nan.ia.app.widget.CustomCheckBox
        android:id="@+id/ckb_show_password"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_register"
        android:layout_marginLeft="@dimen/margin_large_large"
        android:layout_marginTop="@dimen/margin_large"
        app:customcheckbok_checked="true"
        app:customcheckbok_text="隐藏密码"
        android:clickable="true" >
    </com.nan.ia.app.widget.CustomCheckBox>

</RelativeLayout>